# rust-book

03.1-variables/src/: main.rs
05.1-structs/src/: main.rs
05.2-rectangles/src/: main.rs
05.3-rectangles/src/: main.rs
08-common-collections/src/: main.rs
10-generic-types-traits-lifetimes/: Cargo.toml
10-generic-types-traits-lifetimes/src/: main.rs
10.2-traits/src/: main.rs
10.3-lifetimes/src/: main.rs
11-writing-tests/src/: adder.rs  greeting.rs  guess.rs  internal_adder.rs  lib.rs  print_failures.rs  rectangle.rs
11-writing-tests/tests/: adder.rs  internal_adder.rs
12-building-cli/src/: config.rs  lib.rs  main.rs  run.rs
12-building-cli/src/errors/: mod.rs  quiet_error.rs
4-ownership/src/: main.rs
5.1-structs/: README.md
5.1-structs/src/: main.rs
8-common-collections/: Cargo.toml
9-error-handling/: hello.txt
9-error-handling/src/: main.rs
99-minimize-binary-size/: Cargo.toml  README.md
functions/src/: main.rs
hello-world/: main
ownership/src/: main.rs
